[gd_scene load_steps=16 format=3 uid="uid://bcpwm5nnjml6g"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_ur7ax"]
[ext_resource type="Texture2D" uid="uid://bg2r1gyi71xq" path="res://Assets/Resources/lumber.png" id="2_jmkj3"]
[ext_resource type="Theme" uid="uid://cip47tc7xiun5" path="res://Assets/Themes/lumber-button.tres" id="2_w2y46"]
[ext_resource type="Texture2D" uid="uid://fd03va1peca3" path="res://Assets/Resources/stone.png" id="3_lx8te"]
[ext_resource type="Theme" uid="uid://dny6pv2imwjx5" path="res://Assets/Themes/stone-button.tres" id="3_p04mw"]
[ext_resource type="Texture2D" uid="uid://ccmtd8s0g7lvx" path="res://Assets/Resources/grain.png" id="4_6f2n6"]
[ext_resource type="Theme" uid="uid://bk3u7p3u4f1jc" path="res://Assets/Themes/grain-button.tres" id="4_b8hi6"]
[ext_resource type="Texture2D" uid="uid://jatrjna157y2" path="res://Assets/Resources/gold.png" id="5_uacix"]
[ext_resource type="Theme" uid="uid://xp0q1vgrcetg" path="res://Assets/Themes/camp-button.tres" id="6_w1q2m"]
[ext_resource type="Theme" uid="uid://d00sqi52tc2a3" path="res://Assets/Themes/tower-button.tres" id="7_js2d1"]
[ext_resource type="Theme" uid="uid://223sg5slir3a" path="res://Assets/Themes/farm-button.tres" id="8_h07v0"]
[ext_resource type="Theme" uid="uid://wxyxxr8ioyve" path="res://Assets/Themes/mine-button.tres" id="9_qfkyb"]

[sub_resource type="LabelSettings" id="LabelSettings_0ntik"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_qfyqq"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_raq0k"]
font_size = 32
font_color = Color(0, 1, 0, 1)

[node name="CanvasLayer" type="CanvasLayer"]
offset = Vector2(1420, 0)
transform = Transform2D(1, 0, 0, 1, 1420, 0)
script = ExtResource("1_ur7ax")

[node name="Background" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 1080.0
color = Color(0.164706, 0.215686, 0.254902, 1)

[node name="TitleLabel" type="Label" parent="."]
offset_right = 500.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 50
text = "HEX Conquer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Progress" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 250.0

[node name="TurnLabel" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 50.0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "1: Turn 1"
vertical_alignment = 1

[node name="TileLabel" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 250.0
offset_right = 450.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "1 / 5 Tiles"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelPlayer1" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 173.0
offset_bottom = 100.0
text = "Player 1"
label_settings = SubResource("LabelSettings_0ntik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPlayer2" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 173.0
offset_bottom = 150.0
text = "Bot"
label_settings = SubResource("LabelSettings_0ntik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBarPlayer1" type="ProgressBar" parent="Progress"]
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 200.0
offset_top = 60.0
offset_right = 450.0
offset_bottom = 90.0
value = 60.0
show_percentage = false

[node name="ProgressLabelPlayer1" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 200.0
offset_top = 60.0
offset_right = 450.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBarPlayer2" type="ProgressBar" parent="Progress"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 200.0
offset_top = 110.0
offset_right = 450.0
offset_bottom = 140.0
value = 30.0
show_percentage = false

[node name="ProgressLabelPlayer2" type="Label" parent="Progress"]
layout_mode = 0
offset_left = 200.0
offset_top = 110.0
offset_right = 450.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 275.0
offset_right = 500.0
offset_bottom = 350.0

[node name="ExportButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 50.0
offset_right = 150.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 20
text = "Export"

[node name="ResetTurnButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 175.0
offset_right = 325.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 20
text = "Reset Turn"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 350.0
offset_right = 450.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Resources" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 370.0
offset_right = 500.0
offset_bottom = 620.0

[node name="Title" type="Label" parent="Resources"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "Resources"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Labels" type="Control" parent="Resources"]
anchors_preset = 0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 150.0

[node name="Lumber" type="Button" parent="Resources/Labels"]
offset_left = 62.0
offset_top = 8.0
offset_right = 252.0
offset_bottom = 218.0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 3
theme = ExtResource("2_w2y46")

[node name="Stone" type="Button" parent="Resources/Labels"]
offset_left = 162.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 218.0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 3
theme = ExtResource("3_p04mw")

[node name="Grain" type="Button" parent="Resources/Labels"]
offset_left = 262.0
offset_top = 8.0
offset_right = 452.0
offset_bottom = 218.0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 3
theme = ExtResource("4_b8hi6")

[node name="Gold" type="Sprite2D" parent="Resources/Labels"]
position = Vector2(400, 50)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_uacix")

[node name="Amounts" type="Control" parent="Resources"]
layout_mode = 2
anchors_preset = 0
offset_top = 150.0
offset_right = 500.0
offset_bottom = 200.0

[node name="Label1" type="Label" parent="Resources/Amounts"]
layout_mode = 2
offset_left = 50.0
offset_right = 150.0
offset_bottom = 50.0
text = "50"
label_settings = SubResource("LabelSettings_qfyqq")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Resources/Amounts"]
layout_mode = 2
offset_left = 150.0
offset_right = 250.0
offset_bottom = 50.0
text = "50"
label_settings = SubResource("LabelSettings_qfyqq")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Resources/Amounts"]
layout_mode = 2
offset_left = 250.0
offset_right = 350.0
offset_bottom = 50.0
text = "50"
label_settings = SubResource("LabelSettings_qfyqq")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Resources/Amounts"]
layout_mode = 2
offset_left = 350.0
offset_right = 450.0
offset_bottom = 50.0
text = "50"
label_settings = SubResource("LabelSettings_qfyqq")
horizontal_alignment = 1

[node name="Increases" type="Control" parent="Resources"]
anchors_preset = 0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 250.0

[node name="Label1" type="Label" parent="Resources/Increases"]
layout_mode = 0
offset_left = 50.0
offset_right = 150.0
offset_bottom = 50.0
text = "(+5)"
label_settings = SubResource("LabelSettings_raq0k")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Resources/Increases"]
layout_mode = 0
offset_left = 150.0
offset_right = 250.0
offset_bottom = 50.0
text = "(+5)"
label_settings = SubResource("LabelSettings_raq0k")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Resources/Increases"]
layout_mode = 0
offset_left = 250.0
offset_right = 350.0
offset_bottom = 50.0
text = "(+5)"
label_settings = SubResource("LabelSettings_raq0k")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Resources/Increases"]
layout_mode = 0
offset_left = 350.0
offset_right = 450.0
offset_bottom = 50.0
text = "(+5)"
label_settings = SubResource("LabelSettings_raq0k")
horizontal_alignment = 1

[node name="Structures" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 630.0
offset_right = 500.0
offset_bottom = 930.0

[node name="Title" type="Label" parent="Structures"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "Structures"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="BoxContainer" parent="Structures"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 150.0
alignment = 1

[node name="Button1" type="Button" parent="Structures/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_w1q2m")
disabled = true

[node name="Button2" type="Button" parent="Structures/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_js2d1")
disabled = true

[node name="Button3" type="Button" parent="Structures/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_h07v0")
disabled = true

[node name="Button4" type="Button" parent="Structures/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("9_qfkyb")
disabled = true

[node name="Labels" type="Control" parent="Structures"]
layout_mode = 3
anchors_preset = 0
offset_top = 150.0
offset_right = 500.0
offset_bottom = 300.0

[node name="Control1" type="Control" parent="Structures/Labels"]
anchors_preset = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 140.0

[node name="NameLabel" type="Label" parent="Structures/Labels/Control1"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 25.0
text = "Camp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Structures/Labels/Control1"]
layout_mode = 0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 126.0

[node name="HBoxContainer" type="HBoxContainer" parent="Structures/Labels/Control1/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="CostLabel" type="Label" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0
0
0
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jmkj3")
centered = false

[node name="Sprite2" type="Sprite2D" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 27)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_lx8te")
centered = false

[node name="Sprite3" type="Sprite2D" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 54)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6f2n6")
centered = false

[node name="Sprite4" type="Sprite2D" parent="Structures/Labels/Control1/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_uacix")
centered = false

[node name="Control2" type="Control" parent="Structures/Labels"]
anchors_preset = 0
offset_left = 150.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 140.0

[node name="NameLabel" type="Label" parent="Structures/Labels/Control2"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 25.0
text = "Tower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Structures/Labels/Control2"]
layout_mode = 0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="Structures/Labels/Control2/CenterContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0
0
0
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jmkj3")
centered = false

[node name="Sprite2" type="Sprite2D" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 27)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_lx8te")
centered = false

[node name="Sprite3" type="Sprite2D" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 54)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6f2n6")
centered = false

[node name="Sprite4" type="Sprite2D" parent="Structures/Labels/Control2/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_uacix")
centered = false

[node name="Control3" type="Control" parent="Structures/Labels"]
anchors_preset = 0
offset_left = 250.0
offset_top = 10.0
offset_right = 350.0
offset_bottom = 140.0

[node name="NameLabel" type="Label" parent="Structures/Labels/Control3"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 25.0
text = "Farm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Structures/Labels/Control3"]
layout_mode = 0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="Structures/Labels/Control3/CenterContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0
0
0
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jmkj3")
centered = false

[node name="Sprite2" type="Sprite2D" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 27)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_lx8te")
centered = false

[node name="Sprite3" type="Sprite2D" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 54)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6f2n6")
centered = false

[node name="Sprite4" type="Sprite2D" parent="Structures/Labels/Control3/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_uacix")
centered = false

[node name="Control4" type="Control" parent="Structures/Labels"]
anchors_preset = 0
offset_left = 350.0
offset_top = 10.0
offset_right = 450.0
offset_bottom = 140.0

[node name="NameLabel" type="Label" parent="Structures/Labels/Control4"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 25.0
text = "Mine"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Structures/Labels/Control4"]
layout_mode = 0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="Structures/Labels/Control4/CenterContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "0
0
0
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jmkj3")
centered = false

[node name="Sprite2" type="Sprite2D" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 27)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_lx8te")
centered = false

[node name="Sprite3" type="Sprite2D" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 54)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_6f2n6")
centered = false

[node name="Sprite4" type="Sprite2D" parent="Structures/Labels/Control4/CenterContainer/HBoxContainer/Control"]
position = Vector2(0, 81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_uacix")
centered = false

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 950.0
offset_right = 450.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 32
text = "End Turn"

[connection signal="pressed" from="Buttons/ExportButton" to="." method="_on_exportButton_pressed"]
[connection signal="pressed" from="Buttons/ResetTurnButton" to="." method="_on_ResetTurnButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Resources/Labels/Lumber" to="." method="_on_lumber_button_pressed"]
[connection signal="pressed" from="Resources/Labels/Stone" to="." method="_on_stone_button_pressed"]
[connection signal="pressed" from="Resources/Labels/Grain" to="." method="_on_grain_button_pressed"]
[connection signal="pressed" from="Structures/Buttons/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Structures/Buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Structures/Buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Structures/Buttons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
